# dockge

./: Cargo.toml  Dockerfile  README.md  compose.yml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
docs/: dockge.md
examples/: docker-compose.basic.yml  docker-compose.yml
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh  update.sh
src/: abi_export.rs  lib.rs  lifecycle.rs  main.rs  registration.rs  tools.rs  topology.rs  unit_provider.rs
tests/: live_dockge.rs
