[package]
name = "dockge"
version = "0.1.0"
edition = "2021"

[lib]
name = "dockge"
path = "src/lib.rs"
# `cdylib` is the orca plugin artifact orca's `plugin-loader` `dlopen`s;
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets the workspace use it
# as a normal Rust lib.
crate-type = ["cdylib", "rlib"]

# Dockge stack-manager plugin. Hand-written HTTP client + `endpoint_resource!`
# CRUD registry + stack-op tools. No codegen step — there is no upstream
# OpenAPI spec for Dockge, so the small HTTP surface is hand-rolled.

[dependencies]
# The SOLE orca dependency. Every external crate the plugin needs — serde,
# serde_json, schemars, clap, urlencoding, anyhow, async-trait, tokio,
# rusqlite, db, dispatch, contract, derive, inventory — is reached through
# `plugin_toolkit::*` / its prelude, or injected by the
# `#[orca_tool]`/`endpoint_resource!` macro expansions (which emit
# `::plugin_toolkit::*` paths). The plugin source names no external crate
# except `abi_stable` below.
#
# Pinned to the orca rc tag that carries the plugin-toolkit surface (the
# `plugin_toolkit::urlencoding` re-export + endpoint_resource! macro). Until a
# checkout of orca exists at ../orca, the committed `[patch]` in
# `.cargo/config.toml` resolves this to the local in-tree toolkit.
plugin-toolkit = { git = "https://github.com/scottdkey/orca", tag = "v0.0.8-rc.8" }

# The ONE genuine non-orca dep: `#[export_root_module]` expands to bare
# `::abi_stable` paths in this crate's root (the cdylib FFI boundary the loader
# dlopens), so it can't route through the toolkit. Pinned to the orca workspace
# version (0.11) so the layout hash baked into the cdylib matches what orca's
# plugin-loader checks at load time.
abi_stable = "0.11"

[dev-dependencies]
# Dev-only: the in-crate tests reach serde_json + the wiremock HTTP harness.
# Not runtime deps.
plugin-toolkit = { git = "https://github.com/scottdkey/orca", tag = "v0.0.8-rc.8" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
