[package]
name = "dockge"
version = "0.1.0"
edition = "2024"
description = "Dockge self-hosted Compose stack manager — orca plugin + deploy assets"

[package.metadata.orca]
category = "infra"

[lib]
name = "dockge"
path = "src/lib.rs"
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets the workspace use it
# as a normal Rust lib. The plugin artifact is the `[[bin]]` below — a dynamic
# subprocess the loader spawns, not a dlopened cdylib.
crate-type = ["rlib"]

[[bin]]
name = "dockge"
path = "src/main.rs"

# Dockge stack-manager plugin. Socket.IO client (dockge has NO REST — it is
# Socket.IO v4, user/pass → JWT-in-ack) + `endpoint_resource!` CRUD registry for
# the dockge *instances* + a `unit` domain backend surfacing compose stacks. No
# bespoke stack verbs; stacks ride the generic five-verb surface.

[dependencies]
# The SOLE orca dependency. Every external crate the plugin needs — serde,
# serde_json, schemars, clap, urlencoding, anyhow, async-trait, tokio,
# rusqlite, db, dispatch, contract, derive, inventory — is reached through
# `plugin_toolkit::*` / its prelude, or injected by the
# `#[orca_tool]`/`endpoint_resource!` macro expansions (which emit
# `::plugin_toolkit::*` paths). The plugin source names no external crate.
#
# Pinned to the orca rc tag that carries the plugin-toolkit surface (the
# `plugin_toolkit::urlencoding` re-export + endpoint_resource! macro). Until a
# checkout of orca exists at ../orca, the committed `[patch]` in
# `.cargo/config.toml` resolves this to the local in-tree toolkit.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main", default-features = false, features = ["tools", "db", "socketio", "containers"] }

[dev-dependencies]
# Dev-only: the in-crate tests reach serde_json + tokio. The env-gated
# integration test (`DOCKGE_TEST_URL`) drives a live dockge over Socket.IO.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main", default-features = false, features = ["tools", "db", "socketio", "containers"] }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
